# NordschleifenCoach

./: .gitignore  README.md  pyproject.toml
docs/acc/: shared memory.md
docs/architecture/: 00-vision.md  01-requirements.md  02-system-context.md  03-system-overview.md  04-domain-model.md  05-clean-architecture.md  06-module-structure.md  07-development-principles.md  08-domain-design.md  09-telemetry-model.md  10-telemetry-domain.md  99-documentation-guidelines.md
docs/decisions/: ADR-0001-use-clean-architecture.md  ADR-0002 – Use Ports and Adapters  ADR-0003-use-repository-pattern.md  ADR-0004-use-sqlite-as-initial-storage.md  ADR-0005-deterministic-analysis-before-ai.md
docs/research/: acc-shared-memory.md
research/acc_shared_memory/: dump_all_fields.py  live_monitor.py  test_connection.py
scripts/: driving_e2e_test.py  e2e_test.py  inspect_shared_memory.py
src/domain/entities/: lap.py  session.py  track.py
src/domain/value_objects/: distance.py
src/nordschleifen_coach/application/coaching/: coach_engine.py  driving_event.py  driving_event_detector.py  driving_state.py  driving_state_detector.py
src/nordschleifen_coach/application/ports/: telemetry_source.py
src/nordschleifen_coach/application/telemetry/: telemetry_history.py  telemetry_service.py
tests/domain/: test_distance.py  test_lap.py  test_lap_time.py  test_session.py  test_track.py
tests/domain/telemetry/: test_driver_inputs.py  test_environment_state.py  test_session_state.py  test_telemetry_frame.py  test_vehicle_dynamics.py  test_vehicle_state.py  test_wheel.py  test_wheel_state.py
(+39 files in other folders)
